test auto deploy

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -14,7 +14,7 @@
       {{ content | safe }} {# This is where your Markdown content will go #}
     </main>
     <footer>
-      <p>&copy; {{ metadata.currentYear }} Your Name</p>
+      <p>&copy; {{ metadata.currentYear }} Yu Chen</p>
     </footer>
   </body>
 </html>
